--- a/lib/l10n/app_vi.arb
+++ b/lib/l10n/app_vi.arb
@@ -7,5 +7,9 @@
   "home":"Trang chủ",
   "favorites":"Yêu thích",
   "cart":"Giỏ hàng",
-  "profile":"Tài khoản"
+  "profile":"Tài khoản",
+   "detail":"Chi tiết",
+  "buyNow":"Mua ngay",
+  "water":"Nước",
+  "light":"Ánh sáng"
 }
